--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,19 @@
     <artifactId>Servlet</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
         <dependency>
@@ -24,6 +37,7 @@
             <version>2.3.1</version>
             <scope>provided</scope>
         </dependency>
+
 
 
     </dependencies>
