Added new function(Delete user)

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -24,4 +24,19 @@
         <url-pattern>/list</url-pattern>
     </servlet-mapping>
     
+    
+    
+    <!-- delete servlet  -->
+    
+    <servlet>
+        <servlet-name>delete</servlet-name>
+        <servlet-class>app.servlets.DeleteServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>delete</servlet-name>
+        <url-pattern>/delete</url-pattern>
+    </servlet-mapping>
+
+
+    
 </web-app>
